<resources>
    <string name="app_name" translatable="false">Popular Movies</string>

    <string name="appbar_title_popular_movies">Popular Movies</string>
    <string name="appbar_title_top_rated_movies">Top Rated Movies</string>
    <string name="appbar_title_favourite_movies">Favourite Movies</string>

    <string name="menu_main_sort_by">Sort by</string>
    <string name="menu_main_sortby_show_popular">Popular</string>
    <string name="menu_main_sortby_show_top_rated">Top Rated</string>
    <string name="menu_main_sortby_show_favourites">Favourite</string>

    <string name="cont_desc_movie_backdrop_image">Movie backdrop image</string>
    <string name="cont_desc_movie_poster_image">Movie poster image</string>
    <string name="cont_desc_movie_play_button_image">Play button</string>
    <string name="cont_desc_movie_back_button_image">Back button</string>
    <string name="cont_desc_review_link_button">Review url link button</string>
    <string name="cont_desc_movie_item_poster">Movie poster</string>
    <string name="cont_desc_video_item_thumbnail">Movie video thumbnail image</string>
    <string name="cont_desc_video_item_thumbnail_icon">Movie video play button</string>
    <string name="cont_desc_movie_cast_item_profile_image">Movie cast image</string>

    <string name="movie_detail_section_title_overview">Overview</string>
    <string name="movie_no_plot">No Overview was Found</string>
    <string name="movie_detail_section_title_videos">Videos</string>
    <string name="movie_detail_section_title_reviews">Reviews</string>
    <string name="movie_detail_section_title_main_cast">Main Cast</string>
    <string name="movie_detail_max_point_10" translatable="false">/10</string>
    <string name="movie_detail_play">play</string>

    <string name="parc_movie">parc_movie</string>
    <string name="parc_review">parc_review</string>

    <string name="no_favourited_movie_yet">No favourite movie yet...</string>
    <string name="movie_detail_favourited">Movie added to favourites :)</string>
    <string name="movie_detail_unfavourited">Movie removed from favourites.</string>

    <string name="movie_review_title_suffix">Review</string>

    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, tellus neque elit fusce sed. Libero eu pharetra. Lorem egestas aliquam consequat habitant quis mattis, vel praesent, cubilia pede erat et euismod, morbi proin volutpat sed pellentesque erat, lacus ut arcu. Elit erat tellus, aptent consectetuer at a, amet pretium, a sollicitudin mattis fringilla etiam vivamus, et pulvinar quis metus praesent justo. Nunc mauris, laoreet risus nec pharetra, nullam placerat.
</string>
    <string name="john_doe">John Doe</string>
    <string name="sample_url" translatable="false">http://www.sample.url</string>

</resources>
