<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort_by"
        android:icon="@drawable/sort_variant"
        android:title="@string/menu_main_sort_by"
        app:showAsAction="always"
        android:orderInCategory="1">
        <menu>
            <item android:id="@+id/action_show_popular"
                android:title="@string/menu_main_sortby_show_popular" />
            <item android:id="@+id/action_show_top_rated"
                android:title="@string/menu_main_sortby_show_top_rated" />
            <item android:id="@+id/action_show_favourites"
                android:title="@string/menu_main_sortby_show_favourites" />
        </menu>
    </item>

</menu>