<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/movie_detail_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cont_desc_movie_poster_image"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="5dp"
        tools:src="@drawable/placeholder_100x150"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_toRightOf="@+id/movie_detail_poster"
        android:layout_toEndOf="@+id/movie_detail_poster">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/movie_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                tools:text="Sample Title"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/movie_detail_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="3dp"
                    tools:text="Year"/>

                <TextView
                    android:id="@+id/movie_detail_month_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginStart="3dp"
                    tools:text="Month 1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/movie_detail_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    tools:text="9.9"/>

                <TextView
                    android:id="@+id/movie_detail_ratingMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_detail_max_point_10"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_detail_poster"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/movie_detail_section_title_plot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_detail_section_title_overview"
            style="@style/SectionTitle" />

        <TextView
            android:id="@+id/movie_detail_plot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/lorem_ipsum"/>

        <TextView
            android:id="@+id/movie_detail_section_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_detail_section_title_videos"
            style="@style/SectionTitle" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/movie_detail_video_recycle_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/video_item"/>

        <TextView
            android:id="@+id/movie_detail_section_top_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_detail_section_title_main_cast"
            style="@style/SectionTitle"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/movie_detail_cast_recycle_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/cast_item"/>

        <TextView
            android:id="@+id/movie_detail_section_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_detail_section_title_reviews"
            style="@style/SectionTitle"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/movie_detail_review_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/review_item" />

        <ProgressBar
            android:id="@+id/movie_detail_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_gravity="center"/>

    </LinearLayout>

</RelativeLayout>