<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/movie_detail_coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.example.android.popularmovies.MovieDetailActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/movie_detail_appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/movie_detail_collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginStart="@dimen/activity_movie_detail_collapsingToolbar_expanded_title_margin_start"
                app:expandedTitleMarginEnd="@dimen/activity_movie_detail_collapsingToolbar_expanded_title_margin_end">

                <ImageView
                    android:id="@+id/movie_detail_backdrop"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:layout_gravity="top"
                    android:fitsSystemWindows="true"
                    android:contentDescription="@string/cont_desc_movie_backdrop_image"
                    app:layout_collapseMode="parallax"
                    tools:src="@drawable/placeholder_500x350"/>

                <ImageButton
                    android:id="@+id/movie_detail_play_button"
                    android:layout_width="@dimen/activity_movie_detail_play_button_size_big"
                    android:layout_height="@dimen/activity_movie_detail_play_button_size_big"
                    android:layout_marginTop="@dimen/activity_movie_detail_play_button_margin_top"
                    android:background="@drawable/circle"
                    android:src="@drawable/ic_play_arrow_white_48dp"
                    android:layout_centerHorizontal="true"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center"
                    android:contentDescription="@string/cont_desc_movie_play_button_image"
                    android:text="@string/movie_detail_play" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/movie_detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_collapseMode="pin">

                    <ImageButton
                        android:id="@+id/movie_detail_toolbar_backButton"
                        android:layout_width="@dimen/activity_movie_detail_toolbar_backButton_size"
                        android:layout_height="@dimen/activity_movie_detail_toolbar_backButton_size"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_arrow_back_white_48dp"
                        android:contentDescription="@string/cont_desc_movie_back_button_image" />

                    <TextView
                        android:id="@+id/movie_detail_toolbar_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.ActionBarTitle"
                        android:textColor="@android:color/white"
                        tools:text="Gattaca"/>

                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>


        <android.support.v4.widget.NestedScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/movie_detail_poster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/cont_desc_movie_poster_image"
                    android:layout_marginTop="@dimen/activity_movie_detail_poster_margin_top"
                    android:paddingStart="@dimen/activity_movie_detail_poster_margin_start"
                    android:paddingLeft="@dimen/activity_movie_detail_poster_margin_start"
                    android:paddingEnd="@dimen/activity_movie_detail_poster_margin_end"
                    android:paddingRight="@dimen/activity_movie_detail_poster_margin_end"
                    android:paddingBottom="@dimen/activity_movie_detail_poster_margin_bottom"
                    tools:src="@drawable/placeholder_100x150"/>

                <LinearLayout
                    android:id="@+id/movie_detail_fragment_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/activity_movie_detail_fragment_2_padding"
                    android:layout_toRightOf="@+id/movie_detail_poster"
                    android:layout_toEndOf="@+id/movie_detail_poster">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:ignore="UselessParent">

                        <TextView
                            android:id="@+id/movie_detail_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/activity_movie_detail_title_font_size"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:layout_marginTop="@dimen/activity_movie_detail_title_margin_top"
                            android:layout_marginBottom="@dimen/activity_movie_detail_title_margin_bottom"
                            tools:text="Sample Title which is very very long"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/movie_detail_year"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/activity_movie_detail_year_font_size"
                                android:layout_marginTop="@dimen/activity_movie_detail_year_margin_top"
                                android:layout_marginBottom="@dimen/activity_movie_detail_year_margin_bottom"
                                tools:text="Year"/>

                            <TextView
                                android:id="@+id/movie_detail_month_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/activity_movie_detail_month_date_font_size"
                                android:layout_marginTop="@dimen/activity_movie_detail_month_date_margin_top"
                                android:layout_marginBottom="@dimen/activity_movie_detail_month_date_margin_bottom"
                                android:layout_marginLeft="@dimen/activity_movie_detail_month_date_margin_start"
                                android:layout_marginStart="@dimen/activity_movie_detail_month_date_margin_start"
                                tools:text="Month 1"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/movie_detail_rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/activity_movie_detail_rating_font_size"
                                tools:text="9.9"/>

                            <TextView
                                android:id="@+id/movie_detail_ratingMax"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/movie_detail_max_point_10"
                                android:textSize="@dimen/activity_movie_detail_rating_max_font_size" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/movie_detail_fragment_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/movie_detail_poster"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_movie_detail_fragment_3_padding">

                    <TextView
                        android:id="@+id/movie_detail_section_title_plot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_section_title_overview"
                        style="@style/SectionTitle" />

                    <TextView
                        android:id="@+id/movie_detail_plot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/lorem_ipsum"/>

                    <TextView
                        android:id="@+id/movie_detail_section_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_section_title_videos"
                        style="@style/SectionTitle" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/movie_detail_video_recycle_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                        tools:listitem="@layout/video_item"/>

                    <TextView
                        android:id="@+id/movie_detail_section_top_cast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_section_title_main_cast"
                        style="@style/SectionTitle"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/movie_detail_cast_recycle_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                        tools:listitem="@layout/cast_item"/>

                    <TextView
                        android:id="@+id/movie_detail_section_reviews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_section_title_reviews"
                        style="@style/SectionTitle"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/movie_detail_review_recycle_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                        tools:listitem="@layout/review_item" />

                    <ProgressBar
                        android:id="@+id/movie_detail_progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:layout_gravity="center"/>

                </LinearLayout>

            </RelativeLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/movie_detail_fab"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_favorite_border_white_48dp"
            app:rippleColor="@color/colorAccent"
            app:layout_anchor="@id/movie_detail_appBar"
            app:layout_anchorGravity="bottom|right|end" />

    </android.support.design.widget.CoordinatorLayout>

</layout>